adicionado informaçoes para cada projeto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>Meu Portfolio | João Paulo Moura</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -16,7 +16,7 @@
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
-            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Seja bem vindo</a>
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Seja bem-vindo</a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
@@ -142,7 +142,10 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96328918-6f760180-101e-11eb-940d-00fcc75a17d7.png" alt="Log Cabin"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="https://jp-loginfacebook.netlify.app" target="_blank">Clique aqui para acessar</a>
+                                        Este é um clone estático da tela de login do Facebook.
+                                        Neste projeto pude aplica meus conhecimentos sobre Flex-box.</br>
+	                                    Tecnologias utilizadas: Html e Css. 
+                                        <a href="https://jp-loginfacebook.netlify.app" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -171,7 +174,14 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329014-4e61e080-101f-11eb-8aa1-6977f621043c.png" alt="Tasty Cake"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="https://jp-sistema-de-avaliacao-aespi.netlify.app/" target="_blank">Clique aqui para acessar</a>
+                                        Protótipo do Sistema de avaliação institucional, do curso de
+                                        Análise e Desenvolvimento de Sistemas.
+                                        O designer foi criado por um colega de equipe.
+                                        Implementei as as telas de inicio e cadastro da aplicação.
+                                        A ideia do projeto seria proporcionar uma plataforma facil para
+                                        que alunos e professores podessem avalia aspectos da faculdade.</br>
+                                        Tecnologias utilizadas: Html e Css.
+                                        <a href="https://jp-sistema-de-avaliacao-aespi.netlify.app/" class="link-acesso"  target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -200,7 +210,12 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329145-8ddcfc80-1020-11eb-95d5-11c3bc8a4086.png" alt="Circus Tent"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="http://ipsumtracker.surge.sh/" target="_blank">Clique aqui para acessar</a>
+                                        Projeto criado durante o hackathon Nasa SpaceApps Challenge,
+                                        junto à meus colegas da Labenu.</br>
+                                        O site tem como objetivo informar sobre o uso do grafeno
+                                        para a dessalinização e purificação da água.</br>
+                                        Tecnologias utilizadas: React e Styled-Componentes.
+                                        <a href="http://ipsumtracker.surge.sh/" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -229,7 +244,12 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329235-499e2c00-1021-11eb-958d-b72184de0a82.png" alt="Controller"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="http://futurecard-labenu.surge.sh/" target="_blank">Clique aqui para acessar</a>
+                                        Projeto desenvolvido em grupo com a finalidade de criar um site
+                                        de marktplace para comercialização de veículos. 
+                                        Aplicamos pela primeira vez a biblioteca de Materia-UI 
+                                        para o desenvolvimento de interfaces.</br>
+                                        Tecnologias utilizadas: React, Materia-UI e Styled-Componentes.
+                                        <a href="http://futurecard-labenu.surge.sh/" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -258,7 +278,12 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329280-aac5ff80-1021-11eb-906e-f934161c37a6.png" alt="Locked Safe"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="https://jp-happy.netlify.app" target="_blank">Clique aqui para acessar</a>
+                                        O Happy é um projeto que visa facilitar visitas aos orfanatos próximos a você.
+                                        Este é um projeto desenvolvido durante a Next Level Week, realizada pela @Rocketseat durante os dias 12 a 18 de Outubro de 2020.
+                                        Meu maior aprendizado nesse projeto foi a criação de um servidor para a aplicação,
+                                        além do uso de mapas, criação de rotas, e integração com banco de dados.</br>
+                                        Tecnologias utilizadas: Html,Csss, JavaScript, SQLite, NodeJs, Express e Handlebars.</br>
+                                        <a href="https://jp-happy.netlify.app" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -287,7 +312,13 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/95700080-84b4ef80-0c1c-11eb-8241-2711991e4585.png" alt="Submarine"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="http://labefood1.surge.sh/" target="_blank">Clique aqui para acessar</a>
+                                        LabeEats é uma aplicação de delivery de comida, foi realizada
+                                        em grupo com meus colegas da Labenu.
+                                        O Design das páginas e a Api foram entregues pela labenu.
+                                        Implementamos, a interface, rotas, permissões de acesso e requisições a api.
+                                        Colocamos em prática também o uso de bibliotecas de interface.</br>
+                                        Tecnologias utilizadas: React, Axios, Styled-Componentes, React-router-dom e Materia-UI.</br>
+                                        <a href="http://labefood1.surge.sh/" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -317,7 +348,12 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329432-1b215080-1023-11eb-9c36-7811a4e8ead6.png" alt="Submarine"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="https://verificardor-de-idade.netlify.app/" target="_blank">Clique aqui para acessar</a>
+                                        Projeto realizado durante o curso de JavaScript do curso em video.
+                                        A parti do ano de nascimento informado pelo usuário e o seu sexo,
+                                        é retornado uma messagem e foto atravéz do javascript indicando
+                                        a faixa etaria da pessoa.</br>
+                                        Tecnologias utilizadas: Html, Css e JavaScript.
+                                        <a href="https://verificardor-de-idade.netlify.app/" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -347,7 +383,12 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329500-efeb3100-1023-11eb-9056-9a9e21c6be61.png" alt="Submarine"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="http://labeeddit-jp.surge.sh/" target="_blank">Clique aqui para acessar</a>
+                                        Labeddit é uma rede social onde após cadastra-se, o 
+                                        usuário pode postar e interagir com posts de outros usuários.
+                                        Um dos meus maiores conhecimentos que pude aplicar nesse projeto
+                                        foi o uso de rotas com React, além de permissões de acesso as páginas.</br>
+                                        Tecnologias utilizadas: React, Axios, Styled-Componentes e React-router-dom.</br>
+                                        <a href="http://labeeddit-jp.surge.sh/" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
@@ -377,7 +418,10 @@
                                     <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="https://user-images.githubusercontent.com/62079201/96329563-9df6db00-1024-11eb-801b-c5196025abb6.png" alt="Submarine"/>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">
-                                        <a href="http://jp_astromatch_v1.surge.sh/" target="_blank">Clique aqui para acessar</a>
+                                        Atromatch funciona como o Tinder, onde podemos aceitar ou não um perfil.
+                                        Nesse projeto pude entender como funcionam requisições a uma api.
+                                        Tecnologias utilizadas: React, Axios e Styled-Componentes.</br>
+                                        <a href="http://jp_astromatch_v1.surge.sh/" class="link-acesso" target="_blank">Clique aqui para acessar</a>
                                     </p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Fechar</button>
                                 </div>
