--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                         Protótipo do Sistema de avaliação institucional, do curso de
                                         Análise e Desenvolvimento de Sistemas.
                                         O designer foi criado por um colega de equipe.
-                                        Implementei as as telas de inicio e cadastro da aplicação.
+                                        Implementei as telas de inicio e cadastro da aplicação.
                                         A ideia do projeto seria proporcionar uma plataforma facil para
                                         que alunos e professores podessem avalia aspectos da faculdade.</br>
                                         Tecnologias utilizadas: Html e Css.
